# fast-indexer

./: README.md
example/: Example.ipynb
fast_indexer_dev/: README.md  compile-test.sh  compile-xgandalf.sh  icpx  lib-setup.sh  perf-prep.sh  test.sh  xgandalf-snaphot.txt
fast_indexer_dev/doc/: 31012022-server-summary.txt
fast_indexer_dev/doc/sequential/hcs-laptop/default/: sequential-sse.md
fast_indexer_dev/test/src/: .xdp_Makefile.T6NLO1  Makefile  XGandalfPerfTest.cpp
fast_indexer_dev/xgandalf/: CITING  meson.build  meson_options.txt
fast_indexer_dev/xgandalf/Algorithm documentation/: lattice refinement - gradient test.mw  lattice refinement.mw
fast_indexer_dev/xgandalf/include/xgandalf/: BadInputException.h  CustomException.h  Dbscan.h  DetectorToReciprocalSpaceTransform.h  ExperimentSettings.h  HillClimbingOptimizer.h  IndexerAutocorrPrefit.h  IndexerBase.h  IndexerPlain.h  InverseSpaceTransform.h  Lattice.h  LatticeAssembler.h  ReciprocalToRealProjection.h  SamplePointsGenerator.h  SimpleMonochromaticDiffractionPatternPrediction.h  SimpleMonochromaticProjection.h  SparsePeakFinder.h  WrongUsageException.h  eigenDiskImport.h  eigenSTLContainers.h  pointAutocorrelation.h  refinement.h  samplePointsFiltering.h  tests.h
fast_indexer_dev/xgandalf/precomputedSamplePoints/: pitch0.0075_tolerance0  pitch0.01_tolerance0  pitch0.01_tolerance0.005  pitch0.01_tolerance0.01  pitch0.02_tolerance0  pitch0.02_tolerance0.005  pitch0.02_tolerance0.01  pitch0.02_tolerance0.02  pitch0.02_tolerance0.03  pitch0.02_tolerance0.04  pitch0.02_tolerance0.05  pitch0.03_tolerance0  pitch0.03_tolerance0.005  pitch0.03_tolerance0.01  pitch0.03_tolerance0.02  pitch0.03_tolerance0.03  pitch0.03_tolerance0.04  pitch0.03_tolerance0.05  pitch0.04_tolerance0  pitch0.04_tolerance0.005  pitch0.04_tolerance0.01  pitch0.04_tolerance0.02  pitch0.04_tolerance0.03  pitch0.04_tolerance0.04  pitch0.04_tolerance0.05  pitch0.05_tolerance0  pitch0.05_tolerance0.005  pitch0.05_tolerance0.01  pitch0.05_tolerance0.02  pitch0.05_tolerance0.03  pitch0.05_tolerance0.04  pitch0.05_tolerance0.05  pitch0.06_tolerance0  pitch0.06_tolerance0.005  pitch0.06_tolerance0.01  pitch0.06_tolerance0.02  pitch0.06_tolerance0.03  pitch0.06_tolerance0.04  pitch0.06_tolerance0.05  pitch0.07_tolerance0  (+65 more)
fast_indexer_dev/xgandalf/src/: Dbscan.cpp  DetectorToReciprocalSpaceTransform.cpp  ExperimentSettings.cpp  HillClimbingOptimizer.cpp  IndexerAutocorrPrefit.cpp  IndexerBase.cpp  IndexerPlain.cpp  InverseSpaceTransform.cpp  Lattice.cpp  LatticeAssembler.cpp  ReciprocalToRealProjection.cpp  SamplePointsGenerator.cpp  SimpleMonochromaticDiffractionPatternPrediction.cpp  SimpleMonochromaticProjection.cpp  SparsePeakFinder.cpp  main.cpp  pointAutocorrelation.cpp  refinement.cpp  samplePointsFiltering.cpp  tests.cpp
fast_indexer_dev/xgandalf/subprojects/: .gitignore
xgandalf/: .gitignore  .gitmodules
